# lvgl-web-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  lvgl-web-demo.eez-project  lvgl_shell.html  main.c
src/: flow.cpp
src/ui/: actions.c  flow_def.c  flow_def.cpp  flow_def.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_log_eez.c  ui_image_logo_lvgl.c  vars.c
template/: manifest.json  post.js
